--- a/a.htm
+++ b/a.htm
@@ -12,9 +12,9 @@
 	<meta name="Keywords" content="" />
 	<meta name="Description" content="" />
 
-<link rel="stylesheet" type="text/css" href="styles.css" />
-<link rel="stylesheet" type="text/css" href="style.css" />
-<style type="text/css">	ul#nav li {width:19.7%;}</style>
+<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="style.css" />
+<style>	ul#nav li {width:19.7%;}</style>
 </head>
 <body>
 
