--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
 	<meta name="Keywords" content="" />
 	<meta name="Description" content="" />
 
-	<link rel="stylesheet" type="text/css" href="styles.css" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" href="style.css" />
 
 </head>
 <body id="about">
@@ -195,7 +195,7 @@
 </div> <!-- END PAGE-WRAP -->
 
 
-<script type="text/javascript" src="compressed.js"></script>
+<script src="compressed.js"></script>
 
 
 </body>
