--- a/js/test.htm
+++ b/js/test.htm
@@ -2,8 +2,8 @@
 <head>
 
   
-  <script src="FancyZoom.js" language="JavaScript" type="text/javascript"></script>
-  <script src="FancyZoomHTML.js" language="JavaScript" type="text/javascript"></script>
+  <script src="FancyZoom.js" language="JavaScript"></script>
+  <script src="FancyZoomHTML.js" language="JavaScript"></script>
 
 
 </head>
