--- a/5.htm
+++ b/5.htm
@@ -8,15 +8,12 @@
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-<meta name="Keywords" content="" />
-<meta name="Description" content="" />
-
-<link rel="stylesheet" type="text/css" href="styles.css" />
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="style.css" />
 
 </head>
 <body>
-<script type="text/javascript">
+<script>
 
 function cubicInOut(t, b, c, d)
 {
