--- a/bmc/ff.htm
+++ b/bmc/ff.htm
@@ -2,7 +2,7 @@
 <html><head>
     <title>jQuery tooltip</title>
     <script src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
-    <script type="text/javascript">
+    <script>
 
    $(document).ready(function() {
       $("h1").tooltip({
