--- a/5.htm
+++ b/5.htm
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html dir="ltr" lang="ru" xml:lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
 
 <title>Художник Давид Куперфильд</title>
 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+<meta charset=windows-1251>
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-<link rel="stylesheet" href="styles.css" />
-<link rel="stylesheet" href="style.css" />
+<link rel=stylesheet href="styles.css" />
+<link rel=stylesheet href="style.css" />
 
 </head>
 <body>
