--- a/a.htm
+++ b/a.htm
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html dir="ltr" lang="ru" xml:lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
 
 	<title>Художник Давид Куперфильд</title>
 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+<meta charset=windows-1251>
 <meta http-equiv="X-UA-Compatible" content="IE=8" />
 
 	<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
@@ -12,8 +12,8 @@
 	<meta name="Keywords" content="" />
 	<meta name="Description" content="" />
 
-<link rel="stylesheet" href="styles.css" />
-<link rel="stylesheet" href="style.css" />
+<link rel=stylesheet href="styles.css" />
+<link rel=stylesheet href="style.css" />
 <style>	ul#nav li {width:19.7%;}</style>
 </head>
 <body>
