--- a/bmc/nice simple login+.htm
+++ b/bmc/nice simple login+.htm
@@ -17,14 +17,14 @@ if(isset($_GET['action']) && $_GET['action']=='restore_pass'){
 ///////////////////////////////////////////////////////////////////////////////////////////////
 
 ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"  lang="en">
 <head>
     <title>Administration Login</title>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8;charset=utf-8" />
 	<meta http-equiv="Cache-Control" content="no-cache" />
-    <link rel="stylesheet" href="img/global00.css" media="screen" />
-    <link rel="stylesheet" href="img/master00.css" media="screen" />
+    <link rel=stylesheet href="img/global00.css" media="screen" />
+    <link rel=stylesheet href="img/master00.css" media="screen" />
 	<link rel="icon" type="image/gif" href="img/favicon.gif" />
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.gif" />    
 	<script src="js/jscapslock.js"></script>
@@ -32,7 +32,7 @@ if(isset($_GET['action']) && $_GET['action']=='restore_pass'){
 
 <body class="login">
     <!--[if lt IE 7]>
-    <link rel="stylesheet" href="css/ie6.css" media="screen" />
+    <link rel=stylesheet href="css/ie6.css" media="screen" />
     <![endif]-->	
     <form id="Form1" name="Form1" accept-charset="<?php echo $lang['ENCODING'] ?>"  method="post"  action="<?php echo $_SERVER['SCRIPT_NAME']; ?>" onsubmit="return validate();">
 
