--- a/popups/about.html
+++ b/popups/about.html
@@ -26,7 +26,7 @@
 
 								<table width="60" border="0" cellpadding="0" cellspacing="0" style="background-color: #F7F7F7; border-width: 2 2 0 2; border-style: solid; border-color: #FFFFFF; border-bottom: 2px solid #F7F7F7; padding: 2px;">
 									<tr>
-										<td align="center" style="font-family: arial, verdana, helvetica, sans serif; font-size: 10px;">
+										<td align="center" style="font-family: arial,verdana,helvetica; font-size: 10px;">
 											<script>
 												document.write('<a href="about.html?wysiwyg=' + n + '" style="color: #000000; text-decoration: none;">About</a>');
 											</script>
