--- a/popups/bbcode.html
+++ b/popups/bbcode.html
@@ -59,7 +59,7 @@ eg: [quote] Quoted text [/quote]</ul>
 
 <p>You can produce bbCode combinations like embedding an [IMG] in a [URL]<br />eg:<br />
 [url=http://site.com][B] Click here [/B][/url]<br />[url=http://site.com][img]http://site.com/image.png[/img][/url]</p>
-<p align="center"><strong><a href="javascript:window.close();">Close</a></strong></p>
+<p align="center"><strong><a href="#" onclick="window.close()">Close</a></strong></p>
 </body>
 
 </html>
