--- a/bmc/ff.htm
+++ b/bmc/ff.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html><head>
     <title>jQuery tooltip</title>
     <script src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
