alt for images and small fixes

--- a/about.html
+++ b/about.html
@@ -33,16 +33,16 @@
 <!--	<a href="index.htm" id="home" title="Домой">&nbsp;</a>-->
 <!--	<a href="#" id="pin" title="Добавить в закладки">&nbsp;</a>-->
 
-	<img id="fon" alt="" />
+	<img id="fon">
 	
-<!--	<img id="logo" alt="" />-->
+<!--	<img id="logo">-->
 	
 	
 	
 	
 	<table id="molbert" cellpadding="0" cellspacing="0">
 		<tr>
-			<td id="left-top"><img id="logo" src="./images/sign1.png" alt="">
+			<td id="left-top"><img id="logo" src="./images/sign1.png">
 			</td>
 			<td id="top">&nbsp;
 			</td>
@@ -190,7 +190,7 @@
 		</tr>
 	</table>
 	
-<img id="preloader" src="" alt="" style="width:1px;height:1px" />
+<img id="preloader" src="" style="width:1px;height:1px" />
 
 </div> <!-- END PAGE-WRAP -->
 
