--- a/bmc/ff.htm
+++ b/bmc/ff.htm
@@ -4,7 +4,7 @@
     <script src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
     <script>
 
-   $(document).ready(function() {
+   $(function() {
       $("h1").tooltip({
         events:{def:'click, click'},
         effect: "slide",
