--- a/editor/zero.html
+++ b/editor/zero.html
@@ -15,7 +15,7 @@
 <div id="wpcontent">
 <div id="wphead">
 
-<img id="header-logo" src="../wp-includes/images/blank.gif" alt="" width="32" height="32" /> <h1 id="site-heading" ><a href="http://localhost/wordpress2/" title="Visit Site"><span id="site-title">dan</span> <em id="site-visit-button">Visit Site</em></a></h1>
+<img id="header-logo" src="../wp-includes/images/blank.gif" width="32" height="32" /> <h1 id="site-heading" ><a href="http://localhost/wordpress2/" title="Visit Site"><span id="site-title">dan</span> <em id="site-visit-button">Visit Site</em></a></h1>
 
 <div id="wphead-info">
 <div id="user_info">
