--- a/a.htm
+++ b/a.htm
@@ -8,8 +8,8 @@
 
     <link rel="shortcut icon" href="./images/favicon.ico">
 
-    <link rel=stylesheet href="styles.css"/>
-    <link rel=stylesheet href="style.css"/>
+    <link rel=stylesheet href="styles.css">
+    <link rel=stylesheet href="style.css">
     <style>    ul#nav li {
         width: 19.7%;
     }</style>
