--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
 
     <link rel="shortcut icon" href="./images/favicon.ico">
 
-    <meta name="Keywords" content=""/>
-    <meta name="Description" content=""/>
+    <meta name="Keywords" content="">
+    <meta name="Description" content="">
 
-    <link rel=stylesheet href="styles.css"/>
-    <link rel=stylesheet href="style.css"/>
+    <link rel=stylesheet href="styles.css">
+    <link rel=stylesheet href="style.css">
 
 </head>
 <body id="about">
@@ -30,7 +30,7 @@
 
     <!--	<a href="index.htm" id="logo" title="Домой">&nbsp;</a>-->
     <!--	<a href="index.htm" id="home" title="Домой">&nbsp;</a>-->
-    <!--	<a href="#" id="pin" title="Добавить в закладки">&nbsp;</a>-->
+    <!--	<a href=# id="pin" title="Добавить в закладки">&nbsp;</a>-->
 
     <img id="fon">
 
@@ -62,7 +62,7 @@
                                     <u>photos/voinstvo.jpg</u>
 
                                     <p>70х50, масло</p>
-                                    <a href="#"><img src="thumbnails/voinstvo.jpg" alt="Воинство"/></a>
+                                    <a href=#><img src="thumbnails/voinstvo.jpg" alt="Воинство"></a>
                                 </li>
                                 <li>
                                     <h3>Перед бурей</h3>
@@ -70,7 +70,7 @@
                                     <u>photos/pered_burej.jpg</u>
 
                                     <p>масло, 30х35, масло, 04-2010</p>
-                                    <a href="#"><img src="thumbnails/pered_burej.jpg" alt="Перед бурей"/></a>
+                                    <a href=#><img src="thumbnails/pered_burej.jpg" alt="Перед бурей"></a>
                                 </li>
                                 <li>
                                     <h3>Дороги, которые мы выбираем-6</h3>
@@ -78,7 +78,7 @@
                                     <u>photos/dorogi6.jpg</u>
 
                                     <p>70х50</p>
-                                    <a href="#"><img src="thumbnails/dorogi6.jpg" alt="Дороги, которые мы выбираем-6"/></a>
+                                    <a href=#><img src="thumbnails/dorogi6.jpg" alt="Дороги, которые мы выбираем-6"></a>
                                 </li>
                                 <li>
                                     <h3>Мост через Клязьму</h3>
@@ -86,7 +86,7 @@
                                     <u>photos/most.jpg</u>
 
                                     <p>60х48, 06-2010. масло</p>
-                                    <a href="#"><img src="thumbnails/most.jpg" alt="Мост через Клязьму"/></a>
+                                    <a href=#><img src="thumbnails/most.jpg" alt="Мост через Клязьму"></a>
                                 </li>
                                 <li>
                                     <h3>Рассвет</h3>
@@ -94,7 +94,7 @@
                                     <u>photos/rassvet.jpg</u>
 
                                     <p>70х50, 10.2010</p>
-                                    <a href="#"><img src="thumbnails/rassvet.jpg" alt="Рассвет"/></a>
+                                    <a href=#><img src="thumbnails/rassvet.jpg" alt="Рассвет"></a>
                                 </li>
                                 <li>
                                     <h3>Конец страды</h3>
@@ -102,7 +102,7 @@
                                     <u>photos/strada.jpg</u>
 
                                     <p>70х50, 05-2009</p>
-                                    <a href="#"><img src="thumbnails/strada.jpg" alt="Конец страды"/></a>
+                                    <a href=#><img src="thumbnails/strada.jpg" alt="Конец страды"></a>
                                 </li>
                                 <li>
                                     <h3>Строительный рынок</h3>
@@ -110,7 +110,7 @@
                                     <u>photos/runok.jpg</u>
 
                                     <p>70х50, 02-2010</p>
-                                    <a href="#"><img src="thumbnails/runok.jpg" alt="Строительный рынок"/></a>
+                                    <a href=#><img src="thumbnails/runok.jpg" alt="Строительный рынок"></a>
                                 </li>
                                 <li>
                                     <h3>Дороги, которые мы выбираем-2</h3>
@@ -118,7 +118,7 @@
                                     <u>photos/dorogi2.jpg</u>
 
                                     <p>70х50</p>
-                                    <a href="#"><img src="thumbnails/dorogi2.jpg" alt="Дороги, которые мы выбираем-2"/></a>
+                                    <a href=#><img src="thumbnails/dorogi2.jpg" alt="Дороги, которые мы выбираем-2"></a>
                                 </li>
                                 <li>
                                     <h3>Закат</h3>
@@ -126,7 +126,7 @@
                                     <u>photos/zakat.jpg</u>
 
                                     <p></p>
-                                    <a href="#"><img src="thumbnails/zakat.jpg" alt="Закат"/></a>
+                                    <a href=#><img src="thumbnails/zakat.jpg" alt="Закат"></a>
                                 </li>
                                 <li>
                                     <h3>Смерчь</h3>
@@ -134,7 +134,7 @@
                                     <u>photos/smerch.jpg</u>
 
                                     <p></p>
-                                    <a href="#"><img src="thumbnails/smerch.jpg" alt="Смерчь"/></a>
+                                    <a href=#><img src="thumbnails/smerch.jpg" alt="Смерчь"></a>
                                 </li>
                                 <li>
                                     <h3>Распадок</h3>
@@ -142,7 +142,7 @@
                                     <u>photos/raspadok.jpg</u>
 
                                     <p></p>
-                                    <a href="#"><img src="thumbnails/raspadok.jpg" alt="Распадок"/></a>
+                                    <a href=#><img src="thumbnails/raspadok.jpg" alt="Распадок"></a>
                                 </li>
 
                             </ul>
@@ -185,7 +185,7 @@
         </tr>
     </table>
 
-    <img id="preloader" src="" style="width:1px;height:1px"/>
+    <img id="preloader" src="" style="width:1px;height:1px">
 
 </div>
 <!-- END PAGE-WRAP -->
