--- a/popups/create_table.html
+++ b/popups/create_table.html
@@ -188,13 +188,13 @@
                         Rows:
                     </td>
                     <td style="width: 25%;">
-                        <input type="text" size="4" id="rows" name="rows" value="2" style="width: 50px;">
+                        <input type=text size="4" id="rows" name="rows" value="2" style="width: 50px;">
                     </td>
                     <td style="width: 25%;">
                         Width:
                     </td>
                     <td style="width: 30%;">
-                        <input type="text" name="width" id="width" value="100" size="10" style="width: 50px;">
+                        <input type=text name="width" id="width" value="100" size="10" style="width: 50px;">
                         <select name="widthType" id="widthType"
                                 style="margin-right: 10px; font-size: 10px;">
                             <option value="%">%</option>
@@ -207,7 +207,7 @@
                         Cols:
                     </td>
                     <td>
-                        <input type="text" size="4" id="cols" name="cols" value="2" style="width: 50px;">
+                        <input type=text size="4" id="cols" name="cols" value="2" style="width: 50px;">
                     </td>
                     <td>
                         Alignment:
@@ -222,7 +222,7 @@
                     </td>
                 </tr>
             </table>
-            <br/>
+            <br>
             <span style=" font-weight: bold;">Layout:</span>
             <table style="width:100%;" border="0" cellpadding="1" cellspacing="0"
                    class="table-settings">
@@ -232,7 +232,7 @@
                         Padding:
                     </td>
                     <td style="width: 25%;">
-                        <input type="text" id="padding" name="padding" value="2" style="width: 50px;color:#777777; background-color: #eeeeee;">
+                        <input type=text id="padding" name="padding" value="2" style="width: 50px;color:#777777; background-color: #eeeeee;">
                     </td>
                     <td style="width: 25%;">
                         Background-Color:
@@ -244,7 +244,7 @@
                                     <table border="0" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td>
-                                                <input type="text" name="backgroundcolor" id="backgroundcolor" value="none"
+                                                <input type=text name="backgroundcolor" id="backgroundcolor" value="none"
                                                        style="width:50px; color:#777777; background-color: #eeeeee;">
                                             </td>
                                         </tr>
@@ -264,7 +264,7 @@
                         Border-Size:
                     </td>
                     <td>
-                        <input type="text" size="4" id="border" name="border" value="1" style="width: 50px;color:#777777; background-color: #eeeeee;">
+                        <input type=text size="4" id="border" name="border" value="1" style="width: 50px;color:#777777; background-color: #eeeeee;">
                     </td>
                     <td>
                         Border-Color:
@@ -276,7 +276,7 @@
                                     <table border="0" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td>
-                                                <input type="text" name="bordercolor" id="bordercolor" value="none" style="width:50px;color:#777777; background-color: #eeeeee;">
+                                                <input type=text name="bordercolor" id="bordercolor" value="none" style="width:50px;color:#777777; background-color: #eeeeee;">
                                             </td>
                                         </tr>
                                     </table>
@@ -311,7 +311,7 @@
                         Border-Collapse:
                     </td>
                     <td>
-                        <input type="checkbox" name="bordercollapse" id="bordercollapse">
+                        <input type=checkbox name="bordercollapse" id="bordercollapse">
                     </td>
                 </tr>
             </table>
@@ -319,10 +319,10 @@
     </tr>
 </table>
 <div align="right">
-    <input type="submit" value="  Submit  " onClick="buildTable();"
+    <input type=submit value="  Submit  " onClick="buildTable();"
            style="font-size: 12px;">
     &nbsp;
-    <input type="submit" value="  Cancel  " onClick="window.close();"
+    <input type=submit value="  Cancel  " onClick="window.close();"
            style="font-size: 12px; margin-right: 15px;">
 </div>
 </body>
