--- a/popups/insert_image.html
+++ b/popups/insert_image.html
@@ -123,12 +123,12 @@
             <table width="380" border="0" cellpadding="0" cellspacing="0" style="background-color: #F7F7F7; border: 2px solid #FFFFFF; padding: 5px;">
                 <tr>
                     <td style="padding-bottom: 2px; padding-top: 0px; font-family: arial, verdana, helvetica; font-size: 11px;" width="80">Image URL:</td>
-                    <td style="padding-bottom: 2px; padding-top: 0px;" width="300"><input type="text" name="src" id="src" value="" style="font-size: 10px; width: 100%;"
+                    <td style="padding-bottom: 2px; padding-top: 0px;" width="300"><input type=text name="src" id="src" value="" style="font-size: 10px; width: 100%;"
                                                                                           onchange="x1()"></td>
                 </tr>
                 <tr>
                     <td style="padding-bottom: 2px; padding-top: 0px; font-family: arial, verdana, helvetica; font-size: 11px;">Alternate Text:</td>
-                    <td style="padding-bottom: 2px; padding-top: 0px;"><input type="text" name="alt" id="alt" value="" style="font-size: 10px; width: 100%;"></td>
+                    <td style="padding-bottom: 2px; padding-top: 0px;"><input type=text name="alt" id="alt" value="" style="font-size: 10px; width: 100%;"></td>
                 </tr>
             </table>
 
@@ -141,16 +141,16 @@
                         <table width="180" border="0" cellpadding="0" cellspacing="0" style="background-color: #F7F7F7; border: 2px solid #FFFFFF; padding: 5px;">
                             <tr>
                                 <td style="padding-bottom: 2px; padding-top: 0px; font-family: arial, verdana, helvetica; font-size: 11px;">Width:</td>
-                                <td style="width:60px;padding-bottom: 2px; padding-top: 0px;"><input type="text" name="width" id="width" value=""
+                                <td style="width:60px;padding-bottom: 2px; padding-top: 0px;"><input type=text name="width" id="width" value=""
                                                                                                      style="font-size: 10px; width: 100%;"></td>
                             </tr>
                             <tr>
                                 <td style="padding-bottom: 2px; padding-top: 0px; font-family: arial, verdana, helvetica; font-size: 11px;">Height:</td>
-                                <td style="padding-bottom: 2px; padding-top: 0px;"><input type="text" name="height" id="height" value="" style="font-size: 10px; width: 100%;"></td>
+                                <td style="padding-bottom: 2px; padding-top: 0px;"><input type=text name="height" id="height" value="" style="font-size: 10px; width: 100%;"></td>
                             </tr>
                             <tr>
                                 <td style="padding-bottom: 2px; padding-top: 0px; font-family: arial, verdana, helvetica; font-size: 11px;">Border:</td>
-                                <td style="padding-bottom: 2px; padding-top: 0px;"><input type="text" name="border" id="border" value="0" style="font-size: 10px; width: 100%;">
+                                <td style="padding-bottom: 2px; padding-top: 0px;"><input type=text name="border" id="border" value="0" style="font-size: 10px; width: 100%;">
                                 </td>
                             </tr>
                         </table>
@@ -180,11 +180,11 @@
                             </tr>
                             <tr>
                                 <td style="padding-bottom: 2px; padding-top: 0px; font-family: arial, verdana, helvetica; font-size: 11px;">Horizontal Space:</td>
-                                <td style="padding-bottom: 2px; padding-top: 0px;"><input type="text" name="hspace" id="hspace" value="" style="font-size: 10px; width: 100%;"></td>
+                                <td style="padding-bottom: 2px; padding-top: 0px;"><input type=text name="hspace" id="hspace" value="" style="font-size: 10px; width: 100%;"></td>
                             </tr>
                             <tr>
                                 <td style="padding-bottom: 2px; padding-top: 0px; font-family: arial, verdana, helvetica; font-size: 11px;">Vertical Space:</td>
-                                <td style="padding-bottom: 2px; padding-top: 0px;"><input type="text" name="vspace" id="vspace" value="" style="font-size: 10px; width: 100%;"></td>
+                                <td style="padding-bottom: 2px; padding-top: 0px;"><input type=text name="vspace" id="vspace" value="" style="font-size: 10px; width: 100%;"></td>
                             </tr>
                         </table>
 
@@ -192,7 +192,7 @@
                 </tr>
             </table>
 
-            <div align="right" style="padding-top: 5px;"><input type="submit" value="  Submit  " onClick="insertImage();" style="font-size: 12px;">&nbsp;<input type="submit"
+            <div align="right" style="padding-top: 5px;"><input type=submit value="  Submit  " onClick="insertImage();" style="font-size: 12px;">&nbsp;<input type=submit
                                                                                                                                                                 value="  Cancel  "
                                                                                                                                                                 onClick="window.close();"
                                                                                                                                                                 style="font-size: 12px;">
