--- a/5.htm
+++ b/5.htm
@@ -7,8 +7,8 @@
     <meta charset=windows-1251>
 
 
-    <link rel=stylesheet href="styles.css"/>
-    <link rel=stylesheet href="style.css"/>
+    <link rel=stylesheet href="styles.css">
+    <link rel=stylesheet href="style.css">
 
 </head>
 <body>
