--- a/bmc/nice simple login+.htm
+++ b/bmc/nice simple login+.htm
@@ -2,12 +2,12 @@
 if(!defined('IN_BMC'))
 		die('Access Denied!');
 
-if(isset($_GET['action']) && $_GET['action']=='restore_pass'){	
+if(isset($_GET['action']) && $_GET['action']=='restore_pass'){
 
 	if($_GET['restore_success'])
-		echo '<h1><br/>Password regenerated and sent on your email</h1>';
+		echo '<h1><br>Password regenerated and sent on your email</h1>';
 else
-echo '<h3><br/>Email not sent due to an error. Most likely the cause is no write permissions to config.php. Please set CHMOD to 666</h3>';
+echo '<h3><br>Email not sent due to an error. Most likely the cause is no write permissions to config.php. Please set CHMOD to 666</h3>';
 
 }
 ?>
@@ -37,10 +37,10 @@ echo '<h3><br/>Email not sent due to an error. Most likely the cause is no write
                     <input class="textbox340" name="user_login" value=""></label>
 
                 <label>Password
-                    <input type="password" class="textbox340" name="password" value=""></label>
+                    <input type=password class="textbox340" name="password" value=""></label>
 
                 <label>Remember me
-                    <input type="checkbox" name="remember" value="1"></label>
+                    <input type=checkbox name="remember" value="1"></label>
 
                 <div class="submit clearfix">
                     <input type="image" src="img/button-l.png" alt="Log In">
