--- a/editor/zero.html
+++ b/editor/zero.html
@@ -15,7 +15,7 @@
     <div id="wpcontent">
         <div id="wphead">
 
-            <img id="header-logo" src="../wp-includes/images/blank.gif" width="32" height="32"/>
+            <img id="header-logo" src="../wp-includes/images/blank.gif" width="32" height="32">
 
             <h1 id="site-heading"><a href="http://localhost/wordpress2/" title="Visit Site"><span id="site-title">dan</span> <em id="site-visit-button">Visit Site</em></a></h1>
 
@@ -28,7 +28,7 @@
 
                 <div id="favorite-actions">
                     <div id="favorite-first"><a href="post-new.php">New Post</a></div>
-                    <div id="favorite-toggle"><br/></div>
+                    <div id="favorite-toggle"><br></div>
                     <div id="favorite-inside">
                         <div class='favorite-action'><a href='edit.php?post_status=draft'>Drafts</a></div>
                         <div class='favorite-action'><a href='page-new.php'>New Page</a></div>
@@ -45,13 +45,13 @@
 
 
                 <li class="wp-first-item current menu-top menu-top-first menu-top-last" id="menu-dashboard">
-                    <div class='wp-menu-image'><a href='index.php'><br/></a></div>
-                    <div class="wp-menu-toggle"><br/></div>
+                    <div class='wp-menu-image'><a href='index.php'><br></a></div>
+                    <div class="wp-menu-toggle"><br></div>
                     <a href='index.php' class="wp-first-item current menu-top menu-top-first menu-top-last" tabindex="1">Dashboard</a></li>
-                <li class="wp-menu-separator"><a class="separator" href="?unfoldmenu=1"><br/></a></li>
+                <li class="wp-menu-separator"><a class="separator" href="?unfoldmenu=1"><br></a></li>
                 <li class="wp-has-submenu open-if-no-js menu-top menu-top-first" id="menu-posts">
-                    <div class='wp-menu-image'><a href='edit.php'><br/></a></div>
-                    <div class="wp-menu-toggle"><br/></div>
+                    <div class='wp-menu-image'><a href='edit.php'><br></a></div>
+                    <div class="wp-menu-toggle"><br></div>
                     <a href='edit.php' class="wp-has-submenu open-if-no-js menu-top menu-top-first" tabindex="1">Posts</a>
 
                     <div class='wp-submenu'>
@@ -65,8 +65,8 @@
                     </div>
                 </li>
                 <li class="wp-has-submenu menu-top" id="menu-media">
-                    <div class='wp-menu-image'><a href='upload.php'><br/></a></div>
-                    <div class="wp-menu-toggle"><br/></div>
+                    <div class='wp-menu-image'><a href='upload.php'><br></a></div>
+                    <div class="wp-menu-toggle"><br></div>
                     <a href='upload.php' class="wp-has-submenu menu-top" tabindex="1">Media</a>
 
                     <div class='wp-submenu'>
@@ -79,8 +79,8 @@
                 </li>
 
                 <li class="wp-has-submenu menu-top" id="menu-links">
-                    <div class='wp-menu-image'><a href='link-manager.php'><br/></a></div>
-                    <div class="wp-menu-toggle"><br/></div>
+                    <div class='wp-menu-image'><a href='link-manager.php'><br></a></div>
+                    <div class="wp-menu-toggle"><br></div>
                     <a href='link-manager.php' class="wp-has-submenu menu-top" tabindex="1">Links</a>
 
                     <div class='wp-submenu'>
@@ -93,8 +93,8 @@
                     </div>
                 </li>
                 <li class="wp-has-submenu menu-top" id="menu-pages">
-                    <div class='wp-menu-image'><a href='edit-pages.php'><br/></a></div>
-                    <div class="wp-menu-toggle"><br/></div>
+                    <div class='wp-menu-image'><a href='edit-pages.php'><br></a></div>
+                    <div class="wp-menu-toggle"><br></div>
                     <a href='edit-pages.php' class="wp-has-submenu menu-top" tabindex="1">Pages</a>
 
                     <div class='wp-submenu'>
@@ -107,8 +107,8 @@
                 </li>
 
                 <li class="menu-top menu-top-last" id="menu-comments">
-                    <div class='wp-menu-image'><a href='edit-comments.php'><br/></a></div>
-                    <div class="wp-menu-toggle"><br/></div>
+                    <div class='wp-menu-image'><a href='edit-comments.php'><br></a></div>
+                    <div class="wp-menu-toggle"><br></div>
                     <a href='edit-comments.php' class="menu-top menu-top-last" tabindex="1">Comments <span id='awaiting-mod' class='count-0'><span
                         class='pending-count'>0</span></span></a></li>
             </ul>
