--- a/popups/select_color.html
+++ b/popups/select_color.html
@@ -49,7 +49,7 @@
                     <div id="PreviewColor" style="height: 100%; width: 100%"></div>
                 </div>
             </td>
-            <td valign=center><input type="text" size="15" name="enterColor" id="enterColor" style="font-size: 10px;"></td>
+            <td valign=center><input type=text size="15" name="enterColor" id="enterColor" style="font-size: 10px;"></td>
             <td width="100%"></td>
         </tr>
     </form>
