--- a/k.htm
+++ b/k.htm
@@ -1,5 +1,5 @@
 <style>
-    #xyz_main {
+    #_head_main {
         width: 140px;
         height: 240px;
         border: 1px solid #666666;
@@ -13,11 +13,11 @@
     }
 </style>
 
-    <div id="xyz_main">
-        <div id="xyz_header"> Header </div>
-        <div id="xyz_body"> Body </div>
+    <div id="_head_main">
+        <div id="_head_header"> Header </div>
+        <div id="_head_body"> Body </div>
 
-        <div id="xyz_footer"> Footer </div>
+        <div id="_head_footer"> Footer </div>
     </div>
 
 
@@ -26,7 +26,7 @@
 
 <script>
 
-findPos(document.getElementById('xyz_main'))
+findPos(document.getElementById('_head_main'))
 
 function findPos(obj) {
 	var curleft = curtop = 0;
