--- a/bmc/ff.htm
+++ b/bmc/ff.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head>
     <title>jQuery tooltip</title>
-    <script src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
+    <script src="//cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
     <script>
 
    $(function() {
